<resources>
    <string name="login_title">Login</string>
    <string name="main_title">Wezuwiusz</string>
    <string name="grade_title">Grades</string>
    <string name="attendance_title">Attendance</string>
    <string name="exam_title">Exams</string>
    <string name="timetable_title">Timetable</string>
    <string name="settings_title">Settings</string>
    <string name="more_title">More</string>
    <string name="about_title">About</string>
    <string name="logviewer_title">Log viewer</string>
    <string name="debug_title">Debug</string>
    <string name="notification_debug_title">Notification debug</string>
    <string name="debug_cookies_clear">Clear webview cookies</string>
    <string name="contributors_title">Contributors</string>
    <string name="license_title">Licenses</string>
    <string name="message_title">Messages</string>
    <string name="send_message_title">New message</string>
    <string name="add_homework_title">New homework</string>
    <string name="note_title">Notes and achievements</string>
    <string name="homework_title">Homework</string>
    <string name="account_title">Accounts manager</string>
    <string name="account_quick_title">Select account</string>
    <string name="account_details_title">Account details</string>
    <string name="student_info_title">Student info</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="notifications_center_title">Notifications center</string>
    <string name="menu_order_title">Menu configuration</string>
    <string name="grade_subtitle">Semester %1$d, %2$d/%3$d</string>
    <string name="login_header_default">Sign in with the student or parent account</string>
    <string name="login_header_symbol">Enter the symbol from the register page for account: &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="login_nickname_hint">Username</string>
    <string name="login_email_hint">Email</string>
    <string name="login_login_pesel_email_hint">Login, PESEL or e-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_host_hint">UONET+ register variant</string>
    <string name="login_domain_suffix_hint">Custom domain suffix</string>
    <string name="login_type_api">Mobile API</string>
    <string name="login_type_scrapper">Scrapper</string>
    <string name="login_type_hybrid">Hybrid</string>
    <string name="login_token_hint">Token</string>
    <string name="login_pin_hint">PIN</string>
    <string name="login_symbol_hint">Symbol</string>
    <string name="login_symbol_placeholder">E.g. \"lodz\" or \"powiatjaroslawski\"</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_invalid_password">Password too short</string>
    <string name="login_incorrect_password_default">Login details are incorrect</string>
    <string name="login_incorrect_password">%1$s. Make sure the correct UONET+ register variation is selected below</string>
    <string name="login_invalid_pin">Invalid PIN</string>
    <string name="login_invalid_token">Invalid token</string>
    <string name="login_expired_token">Token expired</string>
    <string name="login_invalid_email">Invalid email</string>
    <string name="login_invalid_login">Use the assigned login instead of email</string>
    <string name="login_invalid_custom_email">Use the assigned login or email in @%1$s</string>
    <string name="login_invalid_domain_suffix">Invalid domain suffix</string>
    <string name="login_invalid_symbol">Invalid symbol. If you cannot find it, please contact the school</string>
    <string name="login_invalid_symbol_definitely">Don\'t make this up! If you cannot find it, please contact the school</string>
    <string name="login_incorrect_symbol">Student not found. Validate the symbol and the chosen variation of the UONET+ register</string>
    <string name="login_duplicate_student">Selected student is already logged in</string>
    <string name="login_symbol_helper">The symbol can be found on the register page in&#160;<b>Uczeń</b> →&#160;<b>Dostęp Mobilny</b> →&#160;<b>Wygeneruj kod dostępu</b>.\n\nMake sure that you have set the appropriate register variant in the <b>UONET+ register variant</b> field on the first login screen</string>
    <string name="login_select_student">Select students to log in to the application</string>
    <string name="login_advanced">Other options</string>
    <string name="login_advanced_warning_mobile_api">In this mode, class grade stats, excuse for absence, completed lessons, school information and preview of the list of registered devices are non-functioning</string>
    <string name="login_advanced_warning_scraper">This mode displays the same data as it appears on the register website. Unreliable, but the most functional.</string>
    <string name="login_advanced_warning_hybrid">The combination of the best features of the other two modes. It works faster than the scrapper and provides features not available in the Mobile API mode. It is default mode for Wezuwiusz.</string>
    <string name="login_privacy_policy">Privacy policy</string>
    <string name="login_contact_header">Trouble signing in? Contact us!</string>
    <string name="login_contact_email">Email</string>
    <string name="login_contact_telegram">Telegram</string>
    <string name="login_email_intent_title">Send email</string>
    <string name="login_email_subject" translatable="false">Zgłoszenie: Problemy z logowaniem</string>
    <string name="login_email_text" translatable="false">Informacje o aplikacji:\n\nUrządzenie: %1$s\nWersja SDK: %2$s\nWersja aplikacji: %3$s\nDodatkowe informacje: %4$s\nIdentyfikator instalacji: %5$s\nOstatni błąd: %6$s\n\nNazwa szkoły i miejscowość: %7$s\nDodatkowe informacje: %8$s</string>
    <string name="login_recover_warning">Make sure you select the correct UONET+ register variation!</string>
    <string name="login_recover_button">Reset password</string>
    <string name="login_recover_title">Recover your account</string>
    <string name="login_recover">Recover</string>
    <string name="login_signed_in">Student is already signed in</string>
    <string name="login_host_standard">Standard</string>
    <string name="login_other_search_locations">Other search locations</string>
    <string name="login_no_active_student">No active students found</string>
    <string name="login_symbol_enter">Enter a different symbol</string>
    <string name="login_support_title">Get help</string>
    <string name="login_support_school_hint">Full school name with the town (required)</string>
    <string name="login_support_school_placeholder">Np. ZSTiO Jarosław lub SP nr 99 w Łodzi</string>
    <string name="login_support_school_invalid">Enter correct name of the school</string>
    <string name="login_support_additional_hint">Additional information in Polish (optional)</string>
    <string name="login_support_additional_placeholder">Np. \"Ostatnio zmieniłem szkołę i…\" albo \"Jestem rodzicem i nie widzę drugiego dziecka…\"</string>
    <string name="login_support_submit">Submit</string>
    <string name="notifications_header_title">Enable notifications</string>
    <string name="notifications_header_description">Enable notifications so you don\'t miss message from teacher or new grade</string>
    <string name="notifications_skip">Skip</string>
    <string name="notifications_enable">Enable</string>
    <string name="main_account_picker">Account manager</string>
    <string name="main_log_in">Log in</string>
    <string name="main_session_expired">Session expired</string>
    <string name="main_session_relogin">Session expired, log in again</string>
    <string name="main_expired_credentials_title">Password has expired or been changed</string>
    <string name="main_expired_credentials_description">Your account password has expired or been changed. You will need to log in to Wezuwiusz again</string>
    <string name="grade_header">Grade</string>
    <string name="grade_semester">Semester %s</string>
    <string name="grade_switch_semester">Change semester</string>
    <string name="grade_no_items">No grades</string>
    <string name="grade_weight">Weight</string>
    <string name="grade_weight_value">Weight: %s</string>
    <string name="grade_comment">Comment</string>
    <string name="grade_number_new_items">Number of new ratings: %1$d</string>
    <string name="grade_average">Average: %1$.2f</string>
    <string name="grade_average_year">Annual: %1$.2f</string>
    <string name="grade_points_sum">Points: %s</string>
    <string name="grade_no_average">No average</string>
    <string name="grade_summary_average_semester">Semester average</string>
    <string name="grade_summary_average_year">Annual average</string>
    <string name="grade_summary_points">Total points</string>
    <string name="grade_summary_final_grade">Final grade</string>
    <string name="grade_summary_predicted_grade">Predicted grade</string>
    <string name="grade_summary_descriptive">Descriptive grade</string>
    <string name="grade_summary_calculated_average">Calculated semester average</string>
    <string name="grade_summary_calculated_average_annual">Calculated annual average</string>
    <string name="grade_summary_calculated_average_help_dialog_title">How does Calculated Average work?</string>
    <string name="timetable_lesson">Lesson</string>
    <string name="timetable_changes">Changes</string>
    <string name="completed_lessons_topic">Topic</string>
    <string name="completed_lessons_absence">Absence</string>
    <string name="completed_lessons_resources">Resources</string>
    <string name="attendance_number">Number of lesson</string>
    <string name="exam_type">Type</string>
    <string name="exam_entry_date">Entry date</string>
    <string name="message_select_all">Select all</string>
    <string name="message_restore_from_trash">Restore from trash</string>
    <string name="message_move_to_trash">Move to trash</string>
    <string name="message_delete_forever">Delete permanently</string>
    <string name="note_points">Points</string>
    <string name="all_content">Content</string>
    <string name="all_description">Description</string>
    <string name="all_teacher">Teacher</string>
    <string name="all_date">Date</string>
    <string name="all_entry_date">Entry date</string>
    <string name="all_details">Details</string>
    <string name="all_category">Category</string>
    <string name="all_close">Close</string>
    <string name="all_no_data">No data</string>
    <string name="all_subject">Subject</string>
    <string name="pref_appearance_category">Appearance &amp; Behavior</string>
    <string name="pref_appearance_category_summary">Languages, themes, subjects sorting</string>
    <string name="pref_notifications_category_summary">App notifications, fix problems</string>
    <string name="pref_notifications_category">Notifications</string>
    <string name="pref_sync_category">Synchronization</string>
    <string name="pref_sync_category_summary">Automatic update, synchronization interval</string>
    <string name="pref_advanced_category_summary">Plus and minus values, average calculation</string>
    <string name="pref_advanced_category">Advanced</string>
    <string name="pref_about_category_summary">App version, contributors, social portals</string>
</resources>