<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="appearance"
        app:icon="@drawable/ic_settings_appearance"
        app:summary="@string/pref_appearance_category_summary"
        app:title="@string/pref_appearance_category"
        app:fragment="io.github.wulkanowy.ui.modules.settings.appearance.AppearanceFragment" />
    <Preference
        app:key="notifications"
        app:icon="@drawable/ic_settings_notifications"
        app:summary="@string/pref_notifications_category_summary"
        app:title="@string/pref_notifications_category"
        app:fragment="io.github.wulkanowy.ui.modules.settings.notifications.NotificationsFragment" />
    <Preference
        app:key="sync"
        app:icon="@drawable/ic_settings_sync"
        app:summary="@string/pref_sync_category_summary"
        app:title="@string/pref_sync_category"
        app:fragment="io.github.wulkanowy.ui.modules.settings.sync.SyncFragment" />
    <Preference
        app:key="advanced"
        app:icon="@drawable/ic_settings_advanced"
        app:summary="@string/pref_advanced_category_summary"
        app:title="@string/pref_advanced_category"
        app:fragment="io.github.wulkanowy.ui.modules.settings.advanced.AdvancedFragment" />
    <Preference
        app:key="about"
        app:icon="@drawable/ic_all_about"
        app:summary="@string/pref_about_category_summary"
        app:title="@string/about_title"
        app:fragment="io.github.wulkanowy.ui.modules.about.AboutFragment" />
</PreferenceScreen>
