<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/all_details"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_subject"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/homeworkDialogSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/all_no_data"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_teacher"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/homeworkDialogTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/all_no_data"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_date"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/homeworkDialogDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/all_no_data"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_entry_date"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/homeworkDialogEntryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/all_no_data"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/all_content"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/homeworkDialogContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/all_no_data"
        android:textIsSelectable="true"
        android:textSize="12sp"
        tools:text="@tools:sample/lorem/random" />

</LinearLayout>
