<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/all_details"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/examDialogSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_subject"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/examDialogSubjectValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/examDialogType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exam_type"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/examDialogTypeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/examDialogTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_teacher"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/examDialogTeacherValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/examDialogDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exam_entry_date"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/examDialogDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/examDialogDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_description"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/examDialogDescriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/examDialogClose"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:text="@string/all_close" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
