<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.modules.timetable.completed.CompletedLessonDialog">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/all_details"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable_lesson"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/completed_lessons_topic"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/completedLessonDialogTeacherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_teacher"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/completedLessonDialogChangesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/timetable_changes"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/completedLessonDialogAbsenceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/completed_lessons_absence"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogAbsence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/all_no_data"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/completedLessonDialogResourcesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/completed_lessons_resources"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/completedLessonDialogResources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:autoLink="web"
            android:text="@string/all_no_data"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <Button
            android:id="@+id/completedLessonDialogClose"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:text="@string/all_close"
            android:textAllCaps="true"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>
